#823 - Fixed video popup spacing at bottom

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -510,6 +510,8 @@
 	}
 
 	.video-uploader-footer {
+		display: table;
+		width: 100%;
 
 		.bb-dropdown-wrap {
 			float: left;
